aicars enabled well moving

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <canvas id="gameCanvas"></canvas>
     <script src="js/modules/core.js"></script>
     <script src="js/modules/input.js"></script>
+    <script src="js/modules/road.js"></script>
     <script src="js/modules/engine.js"></script>
+
 </body>
 </html>
